--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "watch-poll": "npm run watch -- --watch-poll"
   },
   "dependencies": {
-    "autoprefixer": "^10",
+    "autoprefixer": "^9.8.8",
     "material-design-icons-iconfont": "^6.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3"
+    "postcss": "^7.0.39",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "devDependencies": {
     "axios": "^0.19.2",
